static/styles.css
:root {
    --title-color: #000000; /* Define a custom property for the highlight color */
    --subtitleColor: #111111; /* slightly darker version of title color*/
    --recColor: #00ff00; /*Color of the rounded Rectangle*/
    --playerNameColor: #000000; /*playerName*/
    --backgroundColor: #00FF00; /*page background */
    --darkerTextColor: #000000; /*Darker Text*/
    --chromaGreen: #00ff00; /* Chromakey green */
}


.page-body {
    background-color: var(--backgroundColor);
    font-family: Arial, sans-serif;
    font-size: 16px;
    color: var(--title-color);
    text-align: center;    
}

.chroma-body {
    background-color: var(--chromaGreen);
    font-family: Arial, sans-serif;
    font-size: 16px;
    color: var(--title-color);
    text-align: center;    
}

.title {
    font-size: 50px;
    color: var(--title-color) ;
    font-family: "Manrope", sans-serif;
    font-weight: 900;
    font-style: normal;
      
}

.subtitle {
    color: #984b45;
    font-size: 17px;
    text-align: center;  
}

.centered_matches {
    text-align: center;
}

.time {
    font-size: 16px;
    color: var(--darkerTextColor) ;
    font-family: "Yantramanav", sans-serif;
    font-weight: 400;
    font-style: normal;
}

.players {
    font-size: 60px;
    color: var(--playerNameColor) ;
    font-family: "Bebas Neue", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    text-align: center;
}
.match-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    width: 100%;
}

.players-small {
    font-size: 40px;
    color: var(--playerNameColor) ;
    font-family: "Bebas Neue", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    text-align: center;
    flex: 1;
}

.tournament {
    font-size: 18px;
    color: var(--darkerTextColor) ;
    font-family: "Yantramanav", sans-serif;
    font-weight: 500;
    font-style: normal;
}

.NextOpponent {
    font-size: 20px;
    color: var(--darkerTextColor) ;
    font-family: "Yantramanav", sans-serif;
    font-weight: 500;
    font-style: normal;
}

.roundedRec { /*rounded rectangle behind text*/
    position: relative;
    padding: 30px;
    background-color: var(--recColor); /* Color of the rounded rectangle */
    border-radius: 25px; /* Rounded corners */
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7); /* Larger and darker shadow */
}

.small-timeBox {
    position: relative;
    width: 20%; /* Set the width to 20% of the screen */
    margin: 0 auto; /* Center the rectangle horizontally */
    padding: 20px;
    background-color: var(--recColor); 
    border-radius: 25px; 
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
}

.vsRoundedRec { /*rounded rectangle behind text*/
    position: relative;
    padding: 3px;
    background-color: var(--recColor); /* Color of the rounded rectangle */
    border-radius: 10px; /* Rounded corners */
    /*box-shadow: 0 5px 5px rgba(0, 0, 0, 1); /* Larger and darker shadow */
}

.match-header {
    display: flex;
    justify-content: center;
    align-items: center; /* Align items vertically in the center */
    padding: 20px;
    background-color: var(--recColor); /* Same as roundedRec for consistency */
    border-radius: 25px; /* Apply rounded corners */
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7); /* Add shadow for effect */
}
.player1, .player2 {
    font-size: 50px;
    color: var(--playerNameColor);
    font-family: "Manrope", sans-serif;
    font-weight: 700;
}
.vs {
    font-size: 40px;
    color: var(--playerNameColor);
    margin: 0 10px; /* Add some space around "Vs." */
    
}

.yantramanav-thin {
  font-family: "Yantramanav", sans-serif;
  font-weight: 100;
  font-style: normal;
}

.yantramanav-light {
  font-family: "Yantramanav", sans-serif;
  font-weight: 300;
  font-style: normal;
}

.yantramanav-regular {
  font-family: "Yantramanav", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.yantramanav-medium {
  font-family: "Yantramanav", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.yantramanav-bold {
  font-family: "Yantramanav", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.yantramanav-black {
  font-family: "Yantramanav", sans-serif;
  font-weight: 900;
  font-style: normal;
}

